# Filename_Tools

./: FNT_AbbreviationsExpander.py  FNT_CapitalizeAfterHyphen.py  FNT_CompoundWordNormalizer.py  FNT_CorpusPatternAnalyzer.py  FNT_HyphenationConsistency.py  FNT_Normalizer.py  FNT_NumberWordConverter.py  FNT_PatternAnalyzer.py  FNT_RegularInserter.py  FNT_RegularInserterEnhanced.py  FNT_ReorderFind-n-Replace.py  FNT_ReorderOpticalSizes.py  FNT_ReorderSlopes.py  FNT_ReorderWidths.py  FNT_StyleNameExpander.py  FNT_WordDeduplicator.py  FontFiles_Cleaner.py  README.md  pyproject.toml  raw_github_urls.txt  requirements.txt
