[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "font-filename-tools"
version = "0.1.0"
description = "Font filename normalization and cleaning tools for consistent naming conventions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fonttools>=4.40.0",
    "rich>=13.0.0",
    "word2number>=1.3",
]

# Note: Entry points require wrapper functions for scripts that take argv
# For now, install from git and run scripts directly with: python script.py
# Future: Add entry point wrappers for direct command access

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-data]
"*" = ["*.py", "core/**/*"]

